# n-u-m-b-u-s.github.io

./: .gitignore  CNAME  Cargo.toml  README.md  index.html  main.js  styles.css
data/: exponential.csv  linear.csv  quadratic.csv  scatter_random.csv  sine.csv  test.csv
pkg/: numbus.d.ts  numbus.js  numbus_bg.wasm  numbus_bg.wasm.d.ts  package.json
rs/pkg/: README.md  package.json  rs.d.ts  rs.js  rs_bg.wasm  rs_bg.wasm.d.ts
src/: lib.rs
templates/: xy.json
ui/: axisConfig.js  svg.js  ui.js
ui/renderFunctinos/: baseFunction.js  scatter.js
util/: fileProcessor.js  util.js
